# indxr

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  INDEX.md  README.md  benchmark.sh  roadmap.md
docs/: agent-integration.md  caching.md  cli-reference.md  dep-graph.md  filtering.md  git-diffing.md  languages.md  mcp-server.md  output-formats.md  token-budget.md  wiki.md
src/: budget.rs  cli.rs  dep_graph.rs  diff.rs  error.rs  filter.rs  github.rs  indexer.rs  init.rs  languages.rs  main.rs  mcp.rs  utils.rs  watch.rs
src/cache/: fingerprint.rs  mod.rs
src/mcp/: helpers.rs  mod.rs  tests.rs  tools.rs  type_flow.rs
src/model/: declarations.rs  mod.rs
src/output/: markdown.rs  mod.rs  yaml.rs
src/parser/: complexity.rs  mod.rs  regex_parser.rs  tree_sitter_parser.rs
src/parser/queries/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/walker/: mod.rs
src/wiki/: generate.rs  mod.rs  page.rs  prompts.rs
tests/: wiki_integration.rs
