[package]
name = "indxr"
version = "0.1.0"
edition = "2024"
description = "Fast codebase indexer for AI agents"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
