[package]
name = "indxr"
version = "0.1.0"
edition = "2024"
description = "Fast codebase indexer for AI agents"

[dependencies]
anyhow = "1"
bincode = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
