[package]
name = "indxr"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Fast codebase indexer for AI agents"
authors = ["bahdotsh"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bahdotsh/indxr"
keywords = ["indexer", "tree-sitter", "mcp", "codebase", "ai"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
http = ["axum", "tokio", "uuid", "async-stream"]

[dependencies]
anyhow = "1"
bincode = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
notify = "7"
notify-debouncer-mini = "0.5"
ureq = { version = "2", features = ["json"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
async-stream = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
